# lunapurpura

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  Doxyfile  LICENSE.md  README.md  build.sh  mingwbuild.sh  now.rb
.github/: FUNDING.yml
lib/: clu.rb  dib.rb  prd.rb  prx.rb
love/: games.lua  genassets.rb  main.lua  scene_backpack.lua  scene_housekeeping1.lua  scene_housekeeping2.lua  scene_tv.lua  serpent.lua
love/newschool/: scene_housekeeping1.lua  scene_housekeeping2.lua  scene_scene1.lua  scene_terminal.lua
love/secret/: scene_housekeeping.lua
love/tricky/: scene_housekeeping.lua
script/: mmfwsound_extractor.rb  unpack_entire_game.rb
src/: CMakeLists.txt
src/clu/: CMakeLists.txt  clu.c  clu.h  main.c
src/dib/: CMakeLists.txt  dib.c  dib.h
src/lputil/: CMakeLists.txt  lpstatus.c  lpstatus.h  lpstb_image_write.h  lputil.c  lputil.h
src/lua/: CMakeLists.txt  luaclu.c  luaprd.c  luaprx.c  luaxpk.c
src/matrix/: CMakeLists.txt  main.c  matrix.c  matrix.h
src/mmfw/: CMakeLists.txt  main.c  mmfw.c  mmfw.h  mmfwfilm.c  mmfwfilm.h  mmfwpicture.c  mmfwpicture.h  mmfwsound.c  mmfwsound.h
src/mruby/: CMakeLists.txt  mrbgem.rake
src/mruby/src/: mrubyclu.c
src/prd/: CMakeLists.txt  main.c  prd.c  prd.h  prdentry.c  prdentry.h
src/prx/: CMakeLists.txt  main.c  prdprs.c  prdprs.h  presagearchive.c  presagearchive.h  presagearchivemember.c  presagearchivemember.h  prx.c  prx.h  prxindexentry.c  prxindexentry.h  prxmember.c  prxmember.h  prxreader.c  prxreader.h  prxreadmain.c
src/riff/: CMakeLists.txt  riff.c  riff.h
src/smf/: CMakeLists.txt  main.c  smf.c  smf.h
src/tests/: CMakeLists.txt  clu_test.c  matrix_test.c
src/xmv/: CMakeLists.txt  main.c  xmv.c  xmv.h
src/xpk/: CMakeLists.txt  main.c  xpk.c  xpk.h  xpkdecoder.c  xpkdecoder.h
src/xpkview/: CMakeLists.txt  xpkview.c
techdoc/: aif.md  clu.md  dib.md  prd_prs.md  prx.md  smf.md  xpk.md
tools/: applyclut.rb  applyclut2smf  clu2png.rb  cluread.rb  dibread  fakesqs2  fusedib  genclut.rb  matrix  mmfwread.rb  prdsread  prxread  smfread  smfread2  xmvread  xpkread  xpkread.rb
